--- a/src/main/resources/public/css/index.css
+++ b/src/main/resources/public/css/index.css
@@ -6,11 +6,79 @@ body {
     color: #f4f4f4;
 }
 
-header {
+/*header {
     background-color: #8B0000;
     color: white;
     text-align: center;
     padding: 20px 10px;
+}*/
+
+
+/*HEADER*/
+header{
+    width: 100%;
+    height: 10vh;
+    background-size: cover;
+    background-position: center;
+}
+
+.nav{
+    position: fixed;
+    width: 100%;
+    display: flex;
+    align-items: center;
+   justify-content: flex-start;
+gap: 20px;
+    padding: 25px;
+    transition: all 0.5s ease;
+    z-index: 999;
+    border-bottom: 1px solid #fff;
+}
+
+.nav.active{
+    background: #fff;
+    padding: 15px;
+}
+.nav.active .logo,
+.nav.active a{
+    color:#000
+}
+
+.nav.active a:hover{
+    background: #000;
+    color: #fff;
+}
+
+.logo{
+    font-size: 40px;
+    color: #fff;
+    font-weight: 100;
+}
+
+.menu{
+    display: flex;
+}
+
+.menu li{
+    list-style: none;
+    margin: 10px;
+}
+
+menu li a{
+    font-weight: bold;
+}
+
+.enlace {
+    color: #fff;
+    text-decoration: none;
+    font-size: 17px;
+}
+.menu li a:hover{
+    padding: 5px 10px;
+    background: #fff;
+    color: #000;
+    border-radius: 15px;
+
 }
 
 main {
