--- a/src/main/resources/public/css/index.css
+++ b/src/main/resources/public/css/index.css
@@ -27,21 +27,21 @@ header{
     width: 100%;
     display: flex;
     align-items: center;
-   justify-content: flex-start;
-gap: 20px;
-    padding: 25px;
+    justify-content: flex-start;
+    gap: 150px;
+    padding: 25px 25px 25px 50px;
     transition: all 0.5s ease;
     z-index: 999;
     border-bottom: 1px solid #fff;
 }
 
 .nav.active{
-    background: #fff;
+    background: #8B0000;
     padding: 15px;
 }
 .nav.active .logo,
 .nav.active a{
-    color:#000
+    color:#ffffff
 }
 
 .nav.active a:hover{
@@ -90,6 +90,36 @@ h1, h2 {
     text-align: center;
 }
 
+.categoria {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 40px;
+    padding-top: 5rem;
+    margin: 0 auto;
+    width: 900px;
+}
+
+.fila {
+    display: flex;
+    justify-content: center; 
+    gap: 150px; 
+}
+
+.operaciones {
+    width: 250px;
+    height: 50px;
+    padding: 20px;
+    border: 1px solid #000;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.operaciones:hover{
+    background: #9ea355b6;
+}
 
 
 button {
@@ -107,5 +137,5 @@ footer {
     padding: 15px;
     background-color: #1f1f1f;
     color: white;
-    margin-top: 30px;
+    margin-top: 40px;
 }
