--- a/src/main/resources/public/css/update.css
+++ b/src/main/resources/public/css/update.css
@@ -14,18 +14,18 @@
     color: #333;
 }
 
-.grupo-campos {
+.grupo-campos, .grupo-campos-usuario{
     display: flex;
     flex-direction: column;
     gap: 1rem;
 }
 
-.grupo-campos label {
+.grupo-campos label, .grupo-campos-usuario label{
     font-weight: bold;
     color: #555;
 }
 
-.grupo-campos input {
+.grupo-campos input, .grupo-campos-usuario input{
     padding: 0.6rem;
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -33,7 +33,7 @@
     transition: border 0.3s;
 }
 
-.grupo-campos input:focus {
+.grupo-campos input:focus, grupo-campos-usuario input:focus {
     border-color: #007bff;
     outline: none;
 }
@@ -71,4 +71,48 @@
 
 .linkUsuario span{
     color: #eafa0b;
+}
+
+
+/*OVERLAY UPDATE USUARIO*/
+
+.overlay-usuarioDatos{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 999;
+    display: none;
+
+    /*
+    margin: 7rem auto 2rem;
+    padding: 2rem;
+    background-color: #f9f9f9;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);*/
+}
+
+#menu-update-usuario{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    width: 400px;
+    transform: translate(-50%, -50%);
+    background-color: rgba(138, 78, 78, 0.363);
+    border: 2px solid rgba(255, 255, 255, 0.5);
+    justify-content: center;
+    align-items: center;
+    padding: 2rem 3rem 2rem 8rem;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); 
+    z-index: 1000; 
+}
+
+.grupo-campos-usuario label{
+    font-weight: bold;
+    color: #000000;
+}
+.hidden-update {
 }
