style: crear vistas para operaciones de datos

--- a/src/main/resources/public/css/index.css
+++ b/src/main/resources/public/css/index.css
@@ -169,6 +169,11 @@ h1, h2 {
 .operaciones h1 {
     font-size: 1.2rem;
     color: #333;
+    text-decoration: none;
+}
+
+.operaciones a {
+    text-decoration: none;
 }
 
 .operaciones:hover {
