--- a/src/main/resources/public/css/operaciones.css
+++ b/src/main/resources/public/css/operaciones.css
@@ -38,7 +38,6 @@
     text-align: left;
     font-size: 1.8rem;
 }
-
 .grupo-campos ul{
     margin: 0;
 }
@@ -71,4 +70,52 @@
 
 .boton-container button:hover{
    background-color: #a30000;
+}
+
+
+
+/*HISTORIAL TRANSACCION*/
+.historial-section {
+    display: flex;
+    flex-direction: column;
+    max-width: 900px;
+    margin: 7rem auto 2rem;
+    padding: 2rem;
+    background-color: #f9f9f9;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.historial-section h2 {
+    text-align: center;
+    margin-bottom: 2rem;
+    font-size: 1.8rem;
+    color: #333;
+}
+
+.grupo-campos-historial{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.grupo-campos-historial p {
+    color: #000000;
+    text-align: left;
+    font-size: 20px;
+}
+
+.datos{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: center;
+}
+
+.data-historia{
+    width: 350px;
+    background-color: rgba(133, 129, 129, 0.74);
+    border: 2px solid #000000;
+    border-radius: 10px;
+    padding: 1rem;
 }
