fix: corregir error al actualizar con validacion del backend y envio del fetch

--- a/src/main/resources/public/css/update.css
+++ b/src/main/resources/public/css/update.css
@@ -156,3 +156,12 @@
 .hidden-update {
     display: none;
 }
+
+/*ERROR RESULTADO*/
+
+.resultado{
+    color: #e06e03;
+    padding-top: 2rem;
+    text-align: center;
+    font-weight: bold;
+}
